--- a/css/styles.css
+++ b/css/styles.css
@@ -165,10 +165,10 @@ button {
   padding-bottom: 120px;
 }
 
-.features-container {
+/* .features-container {
   display: flex;
   align-items: center;
-}
+} */
 .features-list {
   display: flex;
   align-items: center;
@@ -188,7 +188,7 @@ button {
 .features-text {
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.01em;
 }
 /* --------TEAM------ */
 .team {
@@ -209,6 +209,7 @@ button {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 .team-list {
   display: flex;
@@ -258,22 +259,33 @@ button {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 .portfolio-list {
   display: flex;
   align-items: center;
   gap: 24px 48px;
+  width: calc((100% - 72px) / 3);
+  flex-wrap: wrap;
 }
 .portfolio-item {
+  width: 360px;
 }
 .portfolio-image {
 }
+
+.portfolio-container {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
 .portfolio-subtitle {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 .portfolio-text {
   font-size: 16px;
@@ -291,6 +303,7 @@ button {
 
 .footer-logo {
   margin-bottom: 16px;
+  display: inline-block;
 }
 
 .footer-logo .footer-logo-part {
